# cf-aircraft-maintenance-agent

./: .gitignore  README.md  app.py  manifest.yml  pyproject.toml  requirements.txt
src/: agent.py  constants.py  writer_gui.py
